<resources>
    <string name="app_name">MySqlDemo</string>
    <string name="action_settings">Settings</string>
    <string name="log_inn">Log inn</string>
    <string name="opprett_ny_bruker">Opprett ny bruker</string>
    <string name="passord">Passord</string>
    <string name="koble_til_din_e4">Koble til din E4</string>
    <string name="overv_k_logging">Overvåk logging</string>
    <string name="start_logging">Start Logging</string>
    <string name="velg_enhet">Velg enhet:</string>
    <string name="avslutt_logging">Avslutt Logging</string>
    <string name="pause">Pause</string>
    <string name="stressniv">Stressnivå</string>
    <string name="avslutt_overv_kning">Avslutt Overvåkning</string>
    <string name="stressnivaa">Stressnivå</string>

    <string name="accel">Accelerometers</string>
    <string name="accel_x">x:</string>
    <string name="accel_y">y:</string>
    <string name="accel_z">z:</string>
    <string name="bvp_label">BVP</string>
    <string name="eda_label">EDA</string>
    <string name="ibi_label">IBI</string>
    <string name="emptyText">-</string>
    <string name="temp_label">Temperature</string>
    <string name="battery_label">Battery</string>

    <string name="endValue">endValue</string>


</resources>
