<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".bluetooth">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status" />

    <RelativeLayout
        android:id="@+id/dataArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/deviceName"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/accel_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/accel" />

        <LinearLayout
            android:id="@+id/accel_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_label"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_x" />

            <TextView
                android:id="@+id/accel_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_y" />

            <TextView
                android:id="@+id/accel_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_z" />

            <TextView
                android:id="@+id/accel_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

        </LinearLayout>

        <TextView
            android:id="@+id/bvp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_area"
            android:layout_marginTop="10dp"
            android:text="@string/bvp_label" />

        <TextView
            android:id="@+id/bvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/eda_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp"
            android:layout_marginTop="10dp"
            android:text="@string/eda_label" />

        <TextView
            android:id="@+id/eda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eda_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/ibi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eda"
            android:layout_marginTop="10dp"
            android:text="@string/ibi_label" />

        <TextView
            android:id="@+id/ibi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibi_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibi"
            android:layout_marginTop="10dp"
            android:text="@string/temp_label" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/battery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature"
            android:layout_marginTop="10dp"
            android:text="@string/battery_label" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/battery_label"
            android:text="@string/emptyText" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:layout_toStartOf="@+id/toggleButton2" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar2"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="64dp"
        android:layout_toEndOf="@+id/deviceName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:text="Stressnivå" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pauseBtn"
        android:layout_alignBottom="@+id/pauseBtn"
        android:layout_alignParentEnd="true"
        android:onClick="avsluttLogging"
        android:text="Avslutt" />

    <Button
        android:id="@+id/logbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/progressBar2"
        android:layout_toStartOf="@+id/textView3"
        android:onClick="startLogging"
        android:text="Logg" />

    <Button
        android:id="@+id/pauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logbtn"
        android:layout_alignBottom="@+id/logbtn"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/logbtn"
        android:onClick="pauseLogging"
        android:text="Pause" />

</RelativeLayout>
